--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ chromadb==1.0.21
 # pdf ingest
 pymupdf==1.26.4
 
+# embeddings (Gemini API)
+google-genai>=0.3.0
+
 # env + http
 python-dotenv==1.1.1
 httpx>=0.27.2
