updated documentation, added chroma tests

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 
 # Google AI Studio / Gemini API
-# Obtain an API key from https://aistudio.google.com/u/0/app/apikey
+# Obtain an API key from: https://aistudio.google.com/u/0/app/apikey
+# If both GOOGLE_API_KEY and GEMINI_API_KEY are set, GOOGLE_API_KEY is used.
 GOOGLE_API_KEY=
 
 # Alternative env name supported by the SDK (either this or GOOGLE_API_KEY)
 GEMINI_API_KEY=
 
-# Optional: override the embedding model used during ingest (default: gemini-embedding-001)
+# Optional: override the embedding model used during ingest.
+# If left empty or unset, defaults to: gemini-embedding-001
 GEMINI_EMBEDDING_MODEL=
+# Example alternative model:
+# GEMINI_EMBEDDING_MODEL=text-embedding-004
