implemented rag functionality

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,16 @@ GEMINI_API_KEY=
 GEMINI_EMBEDDING_MODEL=
 # Example alternative model:
 # GEMINI_EMBEDDING_MODEL=text-embedding-004
+
+# Optional: if you configured a custom output dimensionality during ingest,
+# specify it here so query-time embeddings match the same dimensionality.
+# e.g., 768, 1536, 3072
+GEMINI_EMBEDDING_DIM=
+
+# LLM (generator) model used at query-time. Does not affect embeddings.
+# Defaults to a fast model; you can override to a larger model if desired.
+GEMINI_LLM_MODEL=gemini-1.5-flash
+
+# Chroma vector store location and collection name for retrieval
+CHROMA_DB_DIR=data/chroma
+CHROMA_COLLECTION=docs
