working pgvector implementation

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,13 @@ GEMINI_LLM_MODEL=gemini-1.5-flash
 # Chroma vector store location and collection name for retrieval
 CHROMA_DB_DIR=data/chroma
 CHROMA_COLLECTION=docs
+
+# Vector store backend selection: chroma (default) or pgvector
+VECTOR_BACKEND=chroma
+
+# Postgres/pgvector configuration (used when VECTOR_BACKEND=pgvector)
+# Preferred URI format for langchain-postgres is SQLAlchemy-style with psycopg v3
+# e.g., postgresql+psycopg://user:pass@host:5432/dbname
+PGVECTOR_URL=
+# Optional: collection/namespace name in pgvector
+PGVECTOR_COLLECTION=docs
